--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <div>
 
         <div  class="video"> <!-- VIDEO LOOP -->
-            <video width="500" height="350" autoplay loop>
-                <source src="./multimedia/video-logo.mp4" type="video/mp4">
+            <video width="500" height="350" autoplay>
+                <source src="./multimedia/video-logo.mp4" type="video/mp4" name="video">
             </video> 
         </div>
     </div> 
