agregué main en contactanos

--- a/archivos-html/contactanos.html
+++ b/archivos-html/contactanos.html
@@ -46,7 +46,54 @@
              </ul>
         </nav>
     </header>
-  
+
+    <main id="mainContacto">
+        <div class="mensajeContacto"><h1>¡CONTACTANOS!</h1></div>
+
+        <div  class="formulario">
+            <div>
+                <label for="nombre">NOMBRE Y APELLIDO: </label>
+                <input class="ingreso" type="text" id="nombre" placeholder="Ingrese su nombre y apellido" required>
+            </div>  
+
+            <div>
+                <label for="mail">E-MAIL: </label>
+                <input class="ingreso" type="email" id="mail" placeholder="Ingrese su e-mail" required>  
+            </div>
+
+            <div>
+                <label for="asunto">TELÉFONO DE CONTACTO: </label>
+                <input class="ingreso" type="tel" id="asunto" placeholder="Ingrese su número" required>
+            </div>
+
+            <div>
+                <label for="multi">MENSAJE: </label>
+                <textarea class="ingreso" type="text" name="multi" id="multi" placeholder="Mensaje" cols="100" rows="5" ></textarea>
+            </div>
+
+            <div class="botones">
+                <input type="submit" name="Enviar" value="Enviar">
+                <input type="reset" name="Limpiar" value="Limpiar">
+            </div>
+
+        </div>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26271.575734761584!2d-58.460408479519785!3d-34.60550252838926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5f855707a2f%3A0x4599858cc4345d78!2sCode%20Factory!5e0!3m2!1ses-419!2sar!4v1653454469032!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <div>
+            <div>
+                <i class="fa-brands fa-whatsapp"></i>
+                <p>+54 9 11 6927 1217</p>
+            </div>
+            
+            <div>
+                <i class="fa-regular fa-building"></i>
+                <p>Malabia 2284, C1425 CABA</p>
+            </div>
+        </div>
+
+    </main>
+
     <footer>
         <ul>
             <li>
