--- a/archivos-html/nosotros.html
+++ b/archivos-html/nosotros.html
@@ -125,7 +125,10 @@
             <p>Aceptamos efectivo, Mercado Pago, o transferencia bancaria.</p>
         </div>
 
-
+    </div>
+    
+    <div>
+        <a href="./contactanos.html"> CONTACTANOS PARA SABER MÁS </a>
     </div>
         
     <footer>
