--- a/archivos-html/contactanos.html
+++ b/archivos-html/contactanos.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO -->
-    <meta name="keywords" content="inicio, proyecto, emprendedor, video, redes, pagina, página, web, sitio, independiente">
-    <meta name="description" content="¡Hola! Soy Buji, cantante independiente, y te invito a conocer mi sitio web.">
+    <meta name="keywords" content="contacto, formulario, contactanos, mensaje, proyecto, emprendedor, video, redes, pagina, página, web, sitio, independiente, emprendimiento, negocio, empresa, diseño, clientes">
+    <meta name="description" content="¡Contactanos y dale un impulso tu negocio!">
 
     <!-- TÍTULO HEAD -->
-    <title>Inicio</title>
+    <title>Contacto</title>
     <link rel="shortcut icon" href="../multimedia/code-factory-logo.png"> <!-- ICONO DEL HEAD -->
     
     <!-- FUENTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto+Slab:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Source+Serif+Pro:wght@300&display=swap" rel="stylesheet">
 
-    <!--    font-family: 'Poppins', sans-serif;  - para menú
-            font-family: 'Roboto Slab', serif    - para documento -->
+    <!--    font-family: 'Josefin Sans', sans-serif;   -  titulos
+            font-family: 'Source Serif Pro', serif;    -  documento -->
 
     <!-- ANIMACIONES -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -47,13 +47,13 @@
         </nav>
     </header>
 
-    <main id="mainContacto">
+    <main id="mainContactanos">
         <div class="mensajeContacto"><h1>¡CONTACTANOS!</h1></div>
 
         <div  class="formulario">
             <div>
                 <label for="nombre">NOMBRE Y APELLIDO: </label>
-                <input class="ingreso" type="text" id="nombre" placeholder="Ingrese su nombre y apellido" required>
+                <input class="ingreso" type="text" id="nombre" placeholder="Ingrese su nombre y apellido" required autofocus>
             </div>  
 
             <div>
@@ -62,8 +62,16 @@
             </div>
 
             <div>
-                <label for="asunto">TELÉFONO DE CONTACTO: </label>
+                <label for="asunto">NÚMERO DE CONTACTO: </label>
                 <input class="ingreso" type="tel" id="asunto" placeholder="Ingrese su número" required>
+            </div>
+
+            <div>
+                <label for="contacto">ME CONTACTO PARA:</label>
+                <label for="radio1">Crear nuevo Sitio Web</label>
+                <input type="radio" name="contacto" value="1">
+                <label for="radio2">Actualizar mi Sitio Web</label>
+                <input type="radio" name="contacto" value="2">
             </div>
 
             <div>
