--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO -->
-    <meta name="keywords" content="inicio, proyecto, emprendedor, video, redes, pagina, página, web, sitio, independiente">
-    <meta name="description" content="¡Hola! Soy Buji, cantante independiente, y te invito a conocer mi sitio web.">
+    <meta name="keywords" content="inicio, proyecto, emprendedor, video, redes, pagina, página, web, sitio, independiente, emprendimiento, negocio, empresa, diseño, clientes">
+    <meta name="description" content="¡Conocé la mejor opción para crear o modernizar tu Sitio Web!">
 
     <!-- TÍTULO HEAD -->
     <title>Inicio</title>
@@ -16,10 +16,10 @@
     <!-- FUENTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto+Slab:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Source+Serif+Pro:wght@300&display=swap" rel="stylesheet">
 
-    <!--    font-family: 'Poppins', sans-serif;  - para menú
-            font-family: 'Roboto Slab', serif    - para documento -->
+    <!--    font-family: 'Josefin Sans', sans-serif;   -  titulos
+            font-family: 'Source Serif Pro', serif;    -  documento -->
 
     <!-- ANIMACIONES -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
