--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./archivos-css/main.css">
-</head>
+    <link rel="stylesheet" href="./archivos-css/style.css">
 
 <body>
     <header>
