--- a/archivos-html/contactanos.html
+++ b/archivos-html/contactanos.html
@@ -31,7 +31,7 @@
 
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../archivos-css/main.css">
+    <link rel="stylesheet" href="../archivos-css/style.css">
 </head>
 <body>
     <header>
