--- a/archivos-html/nosotros.html
+++ b/archivos-html/nosotros.html
@@ -30,7 +30,7 @@
 
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./archivos-css/main.css">
+    <link rel="stylesheet" href="../archivos-css/style.css">
 </head>
 <body>
     <header>
