sigo en proceso con css

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </main> 
 
-        <div class="seccionContactanos">
+        <div class="seccionCeleste">
             <a class="boton" href="./archivos-html/nosotros.html"> CONOCENOS </a>
         </div>
     
@@ -73,17 +73,17 @@
         
         <ul class="lista">
             <li>
-                <a href="https://www.instagram.com/j.delacruz26/" target="_blank">
+                <a class="iconos" href="https://www.instagram.com/j.delacruz26/" target="_blank">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.github.com/JdelaCruz25" target="_blank">
+                <a class="iconos" href="https://www.github.com/JdelaCruz25" target="_blank">
                     <i class="fa-brands fa-github"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/jdelacruz26/" target="_blank">
+                <a class="iconos" href="https://www.linkedin.com/in/jdelacruz26/" target="_blank">
                     <i class="fa-brands fa-linkedin-in"></i>
                 </a>
             </li> 
