terminaciòn de estilos apto pc

--- a/archivos-html/nosotros.html
+++ b/archivos-html/nosotros.html
@@ -50,46 +50,62 @@
     <main id="mainNosotros">
 
         <div class="descripcionNosotros">
-            <div>
+            <div class="nosotros">
                 <img src="../multimedia/airfocus-DvQIwyafV7A-unsplash.jpg" alt="meet">
-                <h1>{ QUIENES SOMOS }</h1>
-                <p>Somos una empresa de desarrollo web que cuenta con más de 10 años de experiencia en el campo de la tecnología. <br> Proporcionamos una variedad de servicios a aquellas empresas que requieran creación, actualización y soporte en sus páginas y sistemas web.</p>
+                
+                <div>
+                    <h1 class="celeste">{ QUIÉNES SOMOS }</h1>
+                    <p>Somos una empresa de desarrollo web que cuenta con más de 10 años de experiencia en el campo de la tecnología. <br> Proporcionamos una variedad de servicios a aquellas empresas que requieran creación, actualización y soporte en sus páginas y sistemas web.</p>
+                </div>
             </div>
 
-            <div>
-                <h2>{ NUESTRO COMPROMISO }</h2>
-                <p>Brindarte el mejor servicio requerido con compromiso y calidad.</p>
+            <div class="nosotros">
+                <div>
+                    <h2 class="celeste">{ NUESTRO COMPROMISO }</h2>
+                    <p>Brindarte el mejor servicio requerido con compromiso y calidad.</p>
+                </div>
+
                 <img src="../multimedia/airfocus-ULQh8ew4P1o-unsplash.jpg" alt="pizarra">
             </div>
 
-            <div>
+            <div class="nosotros">
                 <img src="../multimedia/afshin-t2y-9iMwtLr1WvI-unsplash.jpg" alt="analisis">
-                <h2>{ AUTOMATIZACIÓN Y OPTIMIZACIÓN DE LOS SISTEMAS }</h2>
-                <p>Entendemos que el tiempo es un factor importante para el desarrollo de un negocio. Por eso nos encargamos de que nuestros sistemas solucionen la mayor cantidad de tareas en el menor tiempo posible.</p>
+
+                <div>
+                    <h2 class="celeste">{ AUTOMATIZACIÓN Y OPTIMIZACIÓN }</h2>
+                    <p>Entendemos que el tiempo es un factor importante para el desarrollo de un negocio. Por eso nos encargamos de que nuestros sistemas solucionen la mayor cantidad de tareas en el menor tiempo posible.</p>
+                </div>
             </div>
 
-            <div>
-                <h2>{ PROCESOS PERSONALIZADOS }</h2>
-                <p>Cada empresa habita un universo diferente. Nuestra propuesta en {Code Factory} está cien por ciento orientada hacia las necesidades y funcionamientos internos del cliente.</p>
-                <img src="../multimedia/scott-graham-5fNmWej4tAA-unsplash.jpg" alt="personalizado">
-            </div>
+            <div class="nosotros">
+                <div>
+                    <h2 class="celeste">{ PROCESOS PERSONALIZADOS }</h2>
+                    <p>Cada empresa habita un universo diferente. Nuestra propuesta en {Code Factory} está cien por ciento orientada hacia las necesidades y funcionamientos internos del cliente.</p>
+                </div>
 
-            <div>
                 <img src="../multimedia/austin-distel-wD1LRb9OeEo-unsplash.jpg" alt="equipo">
-                <h2>{ NUESTRO TRABAJO: TU PRÓXIMO SITIO WEB }</h2>
-                <ul>
-                    <li> <i class="fa-regular fa-circle-check iconos"></i> Diseño de Sitio Web con las últimas tecnologías.</li>
-                    <li> <i class="fa-regular fa-circle-check iconos"></i> Diseño Responsivo para dispositivos móviles.</li>
-                    <li> <i class="fa-regular fa-circle-check iconos"></i> Optimización SEO para mejor posicionamiento Web.</li>
-                    <li> <i class="fa-regular fa-circle-check iconos"></i> Páginas Web autogestionables para actualización de contenido.</li>
-                    <li> <i class="fa-regular fa-circle-check iconos"></i> Alojamiento Web (Hosting) gratuito el primer año.</li>
-                    <li> <i class="fa-regular fa-circle-check iconos"></i> Seguridad de tus datos y el de tus clientes.</li>
-                    <li> <i class="fa-regular fa-circle-check iconos"></i> Experiencia multimedia completa.</li>
-                    <li> <i class="fa-regular fa-circle-check iconos"></i> Mapas de localización interactivos.</li>
-                    <li> <i class="fa-regular fa-circle-check iconos"></i> Integración de todas tus redes sociales.</li>
-                    <li> <i class="fa-regular fa-circle-check iconos"></i> Formularios avanzados de pago y de contacto.</li>
-                    <li> <i class="fa-regular fa-circle-check iconos"></i> Soporte real, y capacitación de tu nuevo Sitio Web.</li>
-                </ul>
+            </div>
+
+            <div class="nosotros">
+                <img src="../multimedia/charlesdeluvio-rRWiVQzLm7k-unsplash.jpg" alt="equipo">
+
+
+                <div>
+                    <h2 class="celeste">{ TU PRÓXIMO SITIO WEB }</h2>
+                    <ul class="nuestroTrabajo">
+                        <li> <i class="fa-regular fa-circle-check iconos"></i> Diseño de Sitio Web con las últimas tecnologías.</li>
+                        <li> <i class="fa-regular fa-circle-check iconos"></i> Diseño Responsivo para dispositivos móviles.</li>
+                        <li> <i class="fa-regular fa-circle-check iconos"></i> Optimización SEO para mejor posicionamiento Web.</li>
+                        <li> <i class="fa-regular fa-circle-check iconos"></i>Páginas Web autogestionables para actualización de contenido.</li>
+                        <li> <i class="fa-regular fa-circle-check iconos"></i> Alojamiento Web (Hosting) gratuito el primer año.</li>
+                        <li> <i class="fa-regular fa-circle-check iconos"></i> Seguridad de tus datos y el de tus clientes.</li>
+                        <li> <i class="fa-regular fa-circle-check iconos"></i> Experiencia multimedia completa.</li>
+                        <li> <i class="fa-regular fa-circle-check iconos"></i> Mapas de localización interactivos.</li>
+                        <li> <i class="fa-regular fa-circle-check iconos"></i> Integración de todas tus redes sociales.</li>
+                        <li> <i class="fa-regular fa-circle-check iconos"></i> Formularios avanzados de pago y de contacto.</li>
+                        <li> <i class="fa-regular fa-circle-check iconos"></i> Soporte real, y capacitación de tu nuevo Sitio Web.</li>
+                    </ul>
+                </div>
             </div>
         </div>
 
