--- a/archivos-html/contactanos.html
+++ b/archivos-html/contactanos.html
@@ -59,7 +59,7 @@
                 
                 <div>
                     <i class="fa-regular fa-building iconos"></i>
-                    <p>Malabia 2284, C1425 CABA</p>
+                    <p>Malabia 2284, CABA</p>
                 </div>
             </div>
             
