corrijo errores de responsive en index y contacto

--- a/archivos-html/contactanos.html
+++ b/archivos-html/contactanos.html
@@ -88,7 +88,7 @@
                         <label for="contacto">ME CONTACTO PARA:</label>
                     </div>
 
-                    <div>
+                    <div class="posiblesMotivos">
                         <input type="radio" name="contacto" value="1">
                         <label for="radio1">Crear nuevo Sitio Web</label>
                         <input class="radio" type="radio" name="contacto" value="2">
