arreglo de errores en responsive

--- a/archivos-html/nosotros.html
+++ b/archivos-html/nosotros.html
@@ -109,7 +109,7 @@
             </div>
         </div>
 
-        <div class="fondoColorV">
+        <div class="fondoColorV fondoPreguntas">
             <div class="imgPreguntas">
                 <img src="../multimedia/andrew-neel-9moikpaufvg-unsplash.jpg" alt="espacio">
             </div>
