termino maquetado en pc

--- a/archivos-html/nosotros.html
+++ b/archivos-html/nosotros.html
@@ -63,14 +63,14 @@
                 <img src="../multimedia/airfocus-ULQh8ew4P1o-unsplash.jpg" alt="pizarra">
                 
                 <div>
-                    <h2 class="celeste">{ NUESTRO COMPROMISO }</h2>
+                    <h2 class="celeste">NUESTRO COMPROMISO</h2>
                     <p>Brindarte el mejor servicio requerido con compromiso y calidad.</p>
                 </div>
             </div>
 
             <div class="nosotros reverse">
                 <div>
-                    <h2 class="celeste">{ AUTOMATIZACIÓN Y OPTIMIZACIÓN }</h2>
+                    <h2 class="celeste">AUTOMATIZACIÓN Y OPTIMIZACIÓN</h2>
                     <p>Entendemos que el tiempo es un factor importante para el desarrollo de un negocio. Por eso nos encargamos de que nuestros sistemas solucionen la mayor cantidad de tareas en el menor tiempo posible.</p>
                 </div>
 
@@ -81,14 +81,14 @@
                 <img src="../multimedia/austin-distel-wD1LRb9OeEo-unsplash.jpg" alt="equipo">
                 
                 <div>
-                    <h2 class="celeste">{ PROCESOS PERSONALIZADOS }</h2>
-                    <p>Cada empresa habita un universo diferente. Nuestra propuesta en {Code Factory} está cien por ciento orientada hacia las necesidades y funcionamientos internos del cliente.</p>
+                    <h2 class="celeste">PROCESOS PERSONALIZADOS</h2>
+                    <p>Cada empresa habita un universo diferente. Nuestra propuesta en { Code Factory } está cien por ciento orientada hacia las necesidades y funcionamientos internos del cliente.</p>
                 </div>
             </div>
 
             <div class="nosotros reverse">
                 <div>
-                    <h2 class="celeste">{ TU PRÓXIMO SITIO WEB }</h2>
+                    <h2 class="celeste">TU PRÓXIMO SITIO WEB</h2>
                     <ul class="nuestroTrabajo">
                         <li> <i class="fa-regular fa-circle-check iconos"></i> Diseño de Sitio Web con las últimas tecnologías.</li>
                         <li> <i class="fa-regular fa-circle-check iconos"></i> Diseño Responsivo para dispositivos móviles.</li>
