--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="info">
 
             <div class="titulosIndex">
-                <h1>{ DALE UN IMPULSO A TU NEGOCIO }</h1>
+                <h1>DALE UN IMPULSO A TU NEGOCIO</h1>
                 
                 <h2>¡Conocé la mejor opción para crear o modernizar tu Sitio Web y llegá a más clientes! </h2>
             </div>
