agrego validacion de formulario

--- a/archivos-html/nosotros.html
+++ b/archivos-html/nosotros.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,9 +27,6 @@
 
     <!-- ICONOS -->
     <script src="https://kit.fontawesome.com/6e4fed1ca7.js" crossorigin="anonymous"></script>
-    
-    <!-- BOOTSTRAP -->
-
 
     <!-- CSS -->
     <link rel="stylesheet" href="../archivos-css/style.css">
