--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
     <!-- ICONOS -->
     <script src="https://kit.fontawesome.com/6e4fed1ca7.js" crossorigin="anonymous"></script>
     
-    <!-- BOOTSTRAP -->
-
-
     <!-- CSS -->
     <link rel="stylesheet" href="./archivos-css/style.css">
+</head>
 
 <body>
     <header>
