corrijo botones de formulario

--- a/archivos-html/contactanos.html
+++ b/archivos-html/contactanos.html
@@ -100,8 +100,8 @@
                 </div>
                 
                 <div class="botones">
-                    <input type="submit" name="enviar" value="enviar">
-                    <input type="reset" name="limpiar" value="limpiar">
+                    <input type="submit" name="enviar" value="Enviar">
+                    <input type="reset" name="limpiar" value="Limpiar">
                 </div>
             </form>
         </div>
